--- a/net472/eShopLegacyMVCCore/Views/Shared/_Layout.cshtml
+++ b/net472/eShopLegacyMVCCore/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
+@using Microsoft.AspNetCore.Html;
 @using eShopLegacy.Utilities;
+@using System.Web;
 <!DOCTYPE html>
 <html>
 <head>
@@ -40,9 +42,9 @@
                 <section class="col-sm-6">
                     <img class="esh-app-footer-text hidden-xs" src="~/images/main_footer_text.png" width="335" height="26" alt="footer text image" />
                     <br />
-                   @* @{ var sessionInfo = new HtmlString($"{HttpContext.Current.Session["MachineName"]}, {HttpContext.Current.Session["SessionStartTime"]}");}
+                    @{ var sessionInfo = new HtmlString($"{HttpContext.Current.Session["MachineName"]}, {HttpContext.Current.Session["SessionStartTime"]}");}
                     <small>@sessionInfo</small>
-                    <br />*@
+                    <br />
                     <small>@WebHelper.UserAgent</small>
                 </section>
 
