add authentication to Core project and allow it to share with the framework app

--- a/net472/eShopLegacyMVCCore/Views/Shared/_Layout.cshtml
+++ b/net472/eShopLegacyMVCCore/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <a class="btn esh-button esh-button-primary" href="@Url.Action("index", "UserInfo")">User Info</a>
         </div>
         <div class="esh-header-brand-right">
-            @*@Html.Partial("_LoginPartial")*@
+            @Html.Partial("_LoginPartial")
         </div>
     </header>
     <section class="esh-app-hero">
