--- a/net472/eShopLegacyMVCCore/Views/Shared/_LoginPartial.cshtml
+++ b/net472/eShopLegacyMVCCore/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,4 @@
-﻿@*@using Microsoft.AspNet.Identity
-@if (Request.IsAuthenticated)
+﻿@if (User.Identity?.IsAuthenticated ?? false)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
@@ -7,7 +6,7 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                Hello, @User.Identity.GetUserName()!
+                Hello, @User.Identity.Name!
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
@@ -21,4 +20,3 @@ else
     </ul>
 }
 
-*@
