--- a/net472/eShopLegacyMVCCore/Views/Shared/_LoginPartial.cshtml
+++ b/net472/eShopLegacyMVCCore/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@if (User.Identity?.IsAuthenticated ?? false)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    using (Html.BeginForm("Logout", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
         @Html.AntiForgeryToken()
 
